# app/cmd/uptime/docs/swagger.json
@@ -19,6 +19,11 @@
     "paths": {
         "/API/v1/heartbeats/latencies": {
             "get": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Returns all heartbeats",
                 "consumes": [
                     "application/json"
@@ -71,6 +76,11 @@
         },
         "/API/v1/heartbeats/latencies/last": {
             "get": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Returns last latencies",
                 "consumes": [
                     "application/json"
@@ -117,6 +127,11 @@
         },
         "/API/v1/heartbeats/stats/{days}": {
             "get": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Returns heartbeats stats",
                 "consumes": [
                     "application/json"
@@ -164,6 +179,11 @@
         },
         "/API/v1/notifications": {
             "get": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Returns all notifications",
                 "consumes": [
                     "application/json"
@@ -200,6 +220,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Creates notifications",
                 "consumes": [
                     "application/json"
@@ -214,7 +239,7 @@
                 "parameters": [
                     {
                         "description": "Add notification",
-                        "name": "account",
+                        "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -246,6 +271,11 @@
         },
         "/API/v1/notifications/{notification_name}": {
             "get": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Returns a notification",
                 "consumes": [
                     "application/json"
@@ -288,6 +318,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Deletes notifications",
                 "consumes": [
                     "application/json"
@@ -330,6 +365,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Updates a notification",
                 "consumes": [
                     "application/json"
@@ -383,6 +423,11 @@
         },
         "/API/v1/services": {
             "get": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Returns all services",
                 "consumes": [
                     "application/json"
@@ -419,6 +464,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Creates a new service and starts monitor it",
                 "consumes": [
                     "application/json"
@@ -433,7 +483,7 @@
                 "parameters": [
                     {
                         "description": "Add service",
-                        "name": "account",
+                        "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -465,6 +515,11 @@
         },
         "/API/v1/services/{service_id}": {
             "get": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Gets a service by its ID",
                 "consumes": [
                     "application/json"
@@ -507,6 +562,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Stops a service monitoring and deletes it",
                 "consumes": [
                     "application/json"
@@ -549,6 +609,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Updates an existing service and restarts monitoring for it",
                 "consumes": [
                     "application/json"
@@ -602,6 +667,11 @@
         },
         "/API/v1/services/{service_id}/notifications/{notification_name}": {
             "post": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Adds a notification to a service",
                 "consumes": [
                     "application/json"
@@ -651,6 +721,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
                 "description": "Deletes a notification to a service",
                 "consumes": [
                     "application/json"
@@ -683,6 +758,90 @@
                         "description": "No Content",
                         "schema": {
                             "$ref": "#/definitions/model.ServiceNotification"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/API/v1/tokens": {
+            "post": {
+                "description": "Create an auth token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tokens"
+                ],
+                "summary": "Create an auth token",
+                "parameters": [
+                    {
+                        "description": "Create an auth token",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.CreateToken"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Token"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "HttpBearer": []
+                    }
+                ],
+                "description": "Delete an auth token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tokens"
+                ],
+                "summary": "Delete an auth token",
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "$ref": "#/definitions/model.Token"
                         }
                     },
                     "404": {
@@ -750,6 +909,17 @@
                     "type": "integer"
                 },
                 "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.CreateToken": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
@@ -886,6 +1056,35 @@
                 }
             }
         },
+        "model.Token": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "$ref": "#/definitions/sql.NullTime"
+                },
+                "expire_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/model.User"
+                },
+                "userID": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.UpdateNotification": {
             "type": "object",
             "properties": {
@@ -929,6 +1128,35 @@
                 }
             }
         },
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "$ref": "#/definitions/sql.NullTime"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "sql.NullTime": {
             "type": "object",
             "properties": {
@@ -940,6 +1168,14 @@
                     "type": "boolean"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "HttpBearer": {
+            "description": "Description for what is this security definition being used",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
