# app/model/user.go
@@ -1,0 +1,9 @@
+package model
+
+type User struct {
+	Model
+	FirstName string `json:"first_name"`
+	LastName  string `json:"last_name"`
+	Email     string `json:"email"`
+	Password  string `json:"password"`
+}
